Rename expand icon Replace fixed border colors with ui variables Fix text alignment in settings

--- a/styles/ask-view.less
+++ b/styles/ask-view.less
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: space-between;
     border-width: 1px 0 0 0;
-    border-color: #1b1b1b;
+    border-color: @base-border-color;
     border-style: solid;
   }
 
