--- a/styles/icons.less
+++ b/styles/icons.less
@@ -14,6 +14,13 @@
   }
 }
 
+.icon-triangle-right {
+  &:hover {
+    color: #ffffff;
+    cursor: pointer;
+  }
+}
+
 .icon-triangle-up {
   &:hover {
     color: #ffffff;
